# flaskproj

./: .coverage  .gitignore  Makefile  README.md  app.py  coverage.xml  manager.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
flaskproj/: __init__.py  admin.py  forms.py  main.py  models.py  other.py  views.py
flaskproj/static/: file.css
flaskproj/templates/: about.html  activ.html  bascet.html  base.html  basket-alt.html  basket.html  card_index.html  description.html  forma_autorization.html  forma_avtorization.html  forma_registration.html  index.html  main.html  navbar.html  new_psw.html  orders.html  pay.html  post.html  search.html  status_pay.html  test.html  trend.html
flaskproj/templates/admin/: analytics_index.html  index.html
migrations/versions/: 76d4525f3af8_fix_datetime.py  8c0f6679fae0_refactoring_userprofile.py  916201279047_добавление_invoice_id.py  ceab84eaf98e_del_usercard.py  f91ca5e55fd7_initial_migration.py
tests/: test_flaskproj.py
